fix(docs/_static/css/main.css): fixes #976 - allow submenu items to be selected on mobile devices

--- a/docs/_static/css/main.css
+++ b/docs/_static/css/main.css
@@ -146,3 +146,8 @@ a:visited
 }
 .reference-table thead { font-weight: bold; } 
 .dropdown-menu .divider { margin-right: 20px; }
+
+.dropdown-backdrop
+{
+    position: static;
+}
